Using overflow: hidden at pagination container can fix weird behaviour in plugin layout on slider move in Chrome and IE, (it does not occur in FF)

--- a/jquery.jui_datagrid.css
+++ b/jquery.jui_datagrid.css
@@ -34,7 +34,7 @@ http://mindvisionco.blogspot.gr/2010/12/easy-table-beautifier-by-jquery-ui-css.h
 .grid_pagination {
     padding: 5px 5px 5px 5px;
     margin: 5px 0px 0px 0px;
-    overflow: auto;
+    overflow: hidden !important;
 }
 
 /* data table class affecting table dimensions */
